basic operations on string added

--- a/basic dsa/py_collections.ipynb
+++ b/basic dsa/py_collections.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "464e6427",
    "metadata": {},
    "outputs": [
@@ -41,6 +41,48 @@
     "s = 'asasdsfsfdfsdfsadfdasfasfsadfasdfsafasdfadsfs'\n",
     "my_counter = counter(s)  # it will give the dictionary as an output \n",
     "print(my_counter) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ded1083d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "45"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# print all substring \n",
+    "my_counter.total()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "02b96246",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([10, 14, 9, 12])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(my_counter.values())\n",
+    "for i in values:\n",
+    "    if "
    ]
   },
   {
@@ -89,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "5bfeff67",
    "metadata": {},
    "outputs": [
@@ -104,6 +146,34 @@
    "source": [
     "m = my_counter.total()  # it will sum up all the elemts in the counter \n",
     "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "d826d7be",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def ber( x: int) -> int:\n",
+    "\n",
+    "    cnt = counter(str(x))\n",
+    "    s = cnt.total()\n",
+    "    if x%s==0:\n",
+    "        return s\n",
+    "    \n",
+    "ber(18)"
    ]
   },
   {
