matrix fliping question  added

--- a/simple_rticks.ipynb
+++ b/simple_rticks.ipynb
@@ -912,6 +912,36 @@
     "        print('*',end= ' ')\n",
     "    print('')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22ca2e90",
+   "metadata": {},
+   "source": [
+    "# On python’s and operation\n",
+    "In Python, the expression 1+1==2 and delta involves both a comparison operation and a logical AND operation. When delta = -1, here’s how Python evaluates this expression:\n",
+    "\n",
+    "#### Comparison\n",
+    ": The expression starts with 1+1==2. Python evaluates 1+1 to get 2, and then checks if 2 is equal to 2. Since this is true, the comparison 1+1==2 evaluates to True.\n",
+    "\n",
+    "#### Logical AND:\n",
+    " The and operator in Python performs a logical AND operation. It evaluates to True if both sides of the and are truthy, and False otherwise. A truthy value is any value that is not considered False or empty in a Boolean context. Non-zero numbers, including negative numbers, are considered truthy.\n",
+    "\n",
+    "#### Evaluation with delta:\n",
+    " Since delta = -1, the right side of the and is -1. In Python, -1 is considered a truthy value because it’s not zero.\n",
+    "\n",
+    "Putting it all together, 1+1==2 evaluates to True, and since -1 is truthy, the whole expression 1+1==2 and delta evaluates to the value of delta because of how the and operator works:\n",
+    "\n",
+    "- if the first value is True, it returns the second value. This behavior is part of Python’s short-circuit evaluation.\n",
+    "- The and operator returns the first falsy value it encounters or the last value if none are falsy. Since the comparison is Tr- ue, the and operator returns delta.\n",
+    "- Therefore, when delta = -1, the expression 1+1==2 and delta evaluates to -1."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53eb5579",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
