--- a/basic dsa/strings/basic_ops.ipynb
+++ b/basic dsa/strings/basic_ops.ipynb
@@ -5,43 +5,7 @@
    "execution_count": null,
    "id": "39183de7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['1234',\n",
-       " '43',\n",
-       " '23435',\n",
-       " '34352',\n",
-       " '234',\n",
-       " '4',\n",
-       " '343',\n",
-       " '1',\n",
-       " '3435',\n",
-       " '123',\n",
-       " '23',\n",
-       " '234352',\n",
-       " '2',\n",
-       " '34',\n",
-       " '3',\n",
-       " '352',\n",
-       " '35',\n",
-       " '123435',\n",
-       " '5',\n",
-       " '435',\n",
-       " '4352',\n",
-       " '1234352',\n",
-       " '2343',\n",
-       " '12343',\n",
-       " '12',\n",
-       " '52']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# print all the unique substring fom a string \n",
     "# For a string of length n, total substrings = n*(n+1)/2. and use set for unique ness\n",
@@ -74,6 +38,71 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "eb64aa51",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# conver the number to sum of digits \n",
+    "def sum(num):\n",
+    "\n",
+    "    sum ,y = 0,num\n",
+    "    while y:\n",
+    "        sum +=y%10\n",
+    "        y//=10\n",
+    "    return (sum)\n",
+    "sum(23)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "ae315ff1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# check if the number is prime or not\n",
+    "import math\n",
+    "def is_prime(num):\n",
+    "    if num<2:\n",
+    "        return False\n",
+    "    return all(num%i for i in range(2,int(math.sqrt(num))+1))\n",
+    "\n",
+    "print(is_prime(1221))\n",
+    "is_prime(11)"
    ]
   },
   {
