sorting code updated

--- a/basic dsa/strings/basic_ops.ipynb
+++ b/basic dsa/strings/basic_ops.ipynb
@@ -432,7 +432,7 @@
     "#### vowels.sort(key=ord) \n",
     "\n",
     "- fetching all the vowels from a string : vow = 'AEIOUaeiou'\n",
-    "####  vowels= [i for i in string  if i in vow] \n",
+    "## vowels= [i for i in string  if i in vow] \n",
     "\n",
     "- Always use set for membership testing when you have fixed collections! 📈\n",
     "- List comprehensions are not just \"cool\" - they're often faster than loops! 💨\n",
@@ -555,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "16bd0ce3",
    "metadata": {},
    "outputs": [
@@ -572,6 +572,24 @@
     "s = 'jvfdkjvbsvjjdfvflkclkx' \n",
     "mycounter = counter(s)\n",
     "print(mycounter) # it give us dict( ) inside a set() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "e7760fd2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "b\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(min(mycounter))"
    ]
   },
   {
@@ -615,6 +633,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76dabc6e",
+   "metadata": {},
+   "source": [
+    "## covert a sentece to words list and \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "47d924db",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'list'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m sentence= \u001b[33m'\u001b[39m\u001b[33mhelllo bro kya hhaal chaal tumhare\u001b[39m\u001b[33m'\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m words = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43msentence\u001b[49m\u001b[43m.\u001b[49m\u001b[43msplit\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m(words)\n\u001b[32m      4\u001b[39m bkey = \u001b[33m'\u001b[39m\u001b[33ma\u001b[39m\u001b[33m'\u001b[39m\n",
+      "\u001b[31mTypeError\u001b[39m: int() argument must be a string, a bytes-like object or a real number, not 'list'"
+     ]
+    }
+   ],
+   "source": [
+    "sentence= 'helllo bro kya hhaal chaal tumhare'\n",
+    "words = sentence.split()\n",
+    "print(words)\n",
+    "bkey = 'a'\n",
+    "cnt = 0\n",
+    "from collections import Counter\n",
+    "for i in words:\n",
+    "    print(words[i])\n",
+    "\n",
+    "\n",
+    "    \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "24a82aa0",
    "metadata": {},
    "source": [
@@ -637,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "d94abcbb",
    "metadata": {},
    "outputs": [
@@ -645,8 +704,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2121, 232, 3243, 545, 46, 5, 23, 43, 665, 88, 67]\n",
-      "None\n"
+      "[2121, 232, 3243, 545, 46, 5, 23, 43, 665, 88, 67]\n"
      ]
     }
    ],
@@ -656,6 +714,29 @@
     "print(l1+l2)\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "085cb9aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "str.join() takes exactly one argument (0 given)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[23]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m digits = [\u001b[32m4\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[33;43m\"\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mjoin\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mTypeError\u001b[39m: str.join() takes exactly one argument (0 given)"
+     ]
+    }
+   ],
+   "source": [
+    "digits = [4,3,2,1]\n",
+    "\"\".join( )\n"
    ]
   },
   {
@@ -855,6 +936,14 @@
    "cell_type": "markdown",
    "id": "9edbb048",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "12da39a1",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
