--- a/simple_rticks.ipynb
+++ b/simple_rticks.ipynb
@@ -32,6 +32,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "2015a2e3",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "int() argument must be a string, a bytes-like object or a real number, not 'map'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m digits = [\u001b[32m4\u001b[39m,\u001b[32m3\u001b[39m,\u001b[32m2\u001b[39m,\u001b[32m1\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m num = \u001b[38;5;28;43mint\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mmap\u001b[39;49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mint\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mdigits\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m      3\u001b[39m \u001b[38;5;28mprint\u001b[39m()\n",
+      "\u001b[31mTypeError\u001b[39m: int() argument must be a string, a bytes-like object or a real number, not 'map'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "968a5eb2",
    "metadata": {},
    "outputs": [
@@ -51,7 +71,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "3b2b3aa6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "[int(num) for num in str(int(\"\".join(map(str, res)))+1)]\n",
+    "\n",
+    "print(int(\"\".join(map(str, res))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "efde553b",
    "metadata": {},
    "outputs": [
@@ -74,6 +114,98 @@
     "\n",
     "addtoLst(t)\n",
     "print(lst[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "f76c19be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "m = lst.sort()\n",
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9991e60c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{3, 4, 5, 6, 7}"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# intersections of 3 sets\n",
+    "\n",
+    "s = [1,2,3, 3, 4,5,6,7]\n",
+    "s2 = [3,4,5 ,3,6,7,8,9,9,0,]\n",
+    "\n",
+    "set(s).intersection(s2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "4e079ba9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4, 5, 6, 7, 1, 2, 3, 3])"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "s = [1,2,3, 3, 4,5,6,7]\n",
+    "np.roll(s,4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "549ad43f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 7, 6, 5, 3, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = [1,2,3, 3, 9,5,6,7]\n",
+    "set(s).to\n",
+    "\n",
+    "s\n"
    ]
   },
   {
@@ -942,6 +1074,125 @@
    "id": "53eb5579",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "a9dd1a80",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# product of a array num \n",
+    "num = [1,2,3,4,5]\n",
+    "'*'.join(map(str,num))\n",
+    "\n",
+    "import math\n",
+    "math.prod(n for n in num if n!=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5b90ac0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2160, 1080, 540, 432, 360, 240]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lc 238 \n",
+    "\n",
+    "def product(nums):\n",
+    "        n = len(nums)\n",
+    "        prefix_product = 1\n",
+    "        postfix_product  = 1\n",
+    "        total = [0]*n\n",
+    "        for i in range(n):\n",
+    "            total[i] = prefix_product\n",
+    "            prefix_product *= nums[i]\n",
+    "        for i in range(n-1,-1,-1 ):\n",
+    "            total[i] *= postfix_product\n",
+    "            postfix_product *= nums[i]\n",
+    "        return total\n",
+    "nums = [1,2,4,5,6,9]\n",
+    "\n",
+    "product(nums)\n",
+    "\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "248ce465",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w = [3,4,5,3,5,3,5,3]\n",
+    "t= 5\n",
+    "w.count(t)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "41f7fc33",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "w.sort()\n",
+    "if t not in w:\n",
+    "    print( [-1,-1])\n",
+    "else:\n",
+    "\n",
+    "    print([w.index(t), w.index(t)+w.count(t)-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5af8fbf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -960,7 +1211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
