--- a/basic dsa/searching/all_searching_algos.ipynb
+++ b/basic dsa/searching/all_searching_algos.ipynb
@@ -63,7 +63,18 @@
    "execution_count": null,
    "id": "259c1984",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def binary_search(arr, target):\n",
     "    low, high = 0, len(arr) - 1\n",
@@ -75,8 +86,59 @@
     "            low = mid + 1\n",
     "        else:\n",
     "            high = mid - 1\n",
-    "    return -1\n"
+    "    return -1\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ad0aa037",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lst = [[1,-2,3],[4,5,7],[8,9]]\n",
+    "lst2 = []\n",
+    "for i in range(len(lst)):\n",
+    "    for j in range(len(lst[i])):\n",
+    "        lst2.append()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "356b88dd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2, 3, 4, 8, 9, 79]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [1,2,3,4]\n",
+    "l2 = [1,8,9,79]\n",
+    "\n",
+    "sorted(l1+l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b917e083",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -268,8 +330,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
