simple queues and stack  with help of list

--- a/queues.ipynb
+++ b/queues.ipynb
@@ -742,6 +742,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6da1ece5",
+   "metadata": {},
+   "source": [
+    "## Implememting ques using stack \n",
+    "\n",
+    "Quesues has following operations basically\n",
+    "\n",
+    "\n",
+    "1. void push(int x) Pushes element x to the back of the queue.\n",
+    "2.int pop() Removes the element from the front of the queue and returns it.\n",
+    "3. int peek() Returns the element at the front of the queue.\n",
+    "4. boolean empty() Returns true if the queue is empty, false otherwise.\n",
+    "\n",
+    "\n",
+    "### Implement a first in first out (FIFO) queue using only two stacks. \n",
+    "The implemented queue should support all the functions of a normal queue (push, peek, pop, and empty).\n",
+    "\n",
+    "Implement the MyQueue class:\n",
+    "Queues operation => stack operation\n",
+    "push(int x)   => we use appen method of stack\n",
+    "pop() => first we peek the stack it gives us the first element  and then we pop out the element from the 2nd stack\n",
+    " peek()=> check 2nd stack is empty or not and then pop from the 1st stack and append it to the 2nd stack  and then return the last elelment of the 2nd stack \n",
+    " empty() => check both stack is empty or not \n",
+    "'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a583fc1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyQueue(object):\n",
+    "    def __init__(self):\n",
+    "        self.in_stk = []\n",
+    "        self.out_stk = []\n",
+    "\t# Push element x to the back of queue...\n",
+    "    def push(self, x):\n",
+    "        self.in_stk.append(x)\n",
+    "\t# Remove the element from the front of the queue and returns it...\n",
+    "    def pop(self):\n",
+    "        self.peek()\n",
+    "        return self.out_stk.pop()\n",
+    "\t# Get the front element...\n",
+    "    def peek(self):\n",
+    "        if not self.out_stk:\n",
+    "            while self.in_stk:\n",
+    "                self.out_stk.append(self.in_stk.pop())\n",
+    "        return self.out_stk[-1]\n",
+    "\t# Return whether the queue is empty...\n",
+    "    def empty(self):\n",
+    "        return not self.in_stk and not self.out_stk\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3c279f1",
+   "metadata": {},
+   "source": [
+    "# implement stack using queue\n",
+    "\n",
+    "Implement the MyStack class:\n",
+    "\n",
+    "1. void push(int x) Pushes element x to the top of the stack.\n",
+    "\n",
+    "2. int pop() Removes the element on the top of the stack and returns it.\n",
+    "3. int top() Returns the element on the top of the stack.\n",
+    "4. boolean empty() Returns true if the stack is empty, false otherwise.\n",
+    "\n",
+    "Just use a queue where you \"push to front\" by pushing to back and then rotating the queue until the new element is at the front (i.e., size-1 times move the front element to the back).\n",
+    "\n",
+    "\n",
+    "1. void push(int x) => push to the front by appendleft()\n",
+    "2. int pop() => pop from the left side \n",
+    "3. int top() => return the 0th element by indexing \n",
+    "4. boolean empty() => check the length 0of the queue\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f07ac801",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Stack:\n",
+    "\n",
+    "    def __init__(self):\n",
+    "        self._queue = collections.deque()\n",
+    "\n",
+    "    def push(self, x):\n",
+    "        q = self._queue\n",
+    "        q.append(x)\n",
+    "        for _ in range(len(q) - 1):\n",
+    "            q.append(q.popleft())\n",
+    "        \n",
+    "    def pop(self):\n",
+    "        return self._queue.popleft()\n",
+    "\n",
+    "    def top(self):\n",
+    "        return self._queue[0]\n",
+    "    \n",
+    "    def empty(self):\n",
+    "        return not len(self._queue)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 28,
    "id": "50043950",
