--- a/basic dsa/recursion/backtracking.ipynb
+++ b/basic dsa/recursion/backtracking.ipynb
@@ -37,14 +37,6 @@
     "- how do we branch (generate possible children)?\n",
     "## apply the following backtracking template:\n",
     "\n",
-    "function dfs(start_index, path):\n",
-    "  if is_leaf(start_index):\n",
-    "    report(path)\n",
-    "    return\n",
-    "  for edge in get_edges(start_index):\n",
-    "    path.add(edge)\n",
-    "    dfs(start_index + 1, path)\n",
-    "    path.pop()\n",
     "\n",
     "\n",
     "\n",
@@ -55,6 +47,7 @@
     "Classic combinatorial search problem, we can solve it using 3-step system\n",
     "\n",
     "1. Identify states\n",
+    "\n",
     "What state do we need to know whether we have reached a solution (and using it to construct a solution if the problem asks for it).\n",
     "We need a state to keep track of the list of letters we have chosen for the current permutation\n",
     "What state do we need to decide which child nodes should be visited next and which ones should be pruned?\n",
@@ -65,6 +58,26 @@
     "\n",
     "- A list to represent permutation constructed so far, path\n",
     "-A list to record which letters are already used, used, used[i] == true means ith letter in the origin list has been used.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b02a41aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# template\n",
+    "'''\n",
+    "function dfs(start_index, path):\n",
+    "  if is_leaf(start_index):\n",
+    "    report(path)\n",
+    "    return\n",
+    "  for edge in get_edges(start_index):\n",
+    "    path.add(edge)\n",
+    "    dfs(start_index + 1, path)\n",
+    "    path.pop()\n",
+    "'''"
    ]
   },
   {
@@ -136,11 +149,88 @@
    "id": "de232e55",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c2a5bd3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 4, 5, 6]\n",
+      "*\n",
+      "+\n",
+      "-\n",
+      "/\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = '3456'\n",
+    "lst = [int(i) for i in num]\n",
+    "print(lst)\n",
+    "operator = ['*','+','-','/']\n",
+    "for j in operator:\n",
+    "    print(j)\n",
+    "s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "83773f71",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for +: 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[12]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m j \u001b[38;5;129;01min\u001b[39;00m operator:\n\u001b[32m      2\u001b[39m     \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m lst:\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m         \u001b[38;5;28mprint\u001b[39m(\u001b[43mi\u001b[49m\u001b[43m+\u001b[49m\u001b[43mj\u001b[49m+(i+\u001b[32m1\u001b[39m)+j+(i+\u001b[32m2\u001b[39m)+j+(i+\u001b[32m3\u001b[39m))\n",
+      "\u001b[31mTypeError\u001b[39m: unsupported operand type(s) for +: 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "for j in operator:\n",
+    "    for i in lst:\n",
+    "        print(i+j+(i+1)+j+(i+2)+j+(i+3))\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "140e6076",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
