Linked lIst revision done

--- a/basic dsa/strings/basic_ops.ipynb
+++ b/basic dsa/strings/basic_ops.ipynb
@@ -231,6 +231,29 @@
   },
   {
    "cell_type": "markdown",
+   "id": "800c4a94",
+   "metadata": {},
+   "source": [
+    "#### Removing duplicates from the string :\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "97eb22f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def removeDuplicateLetters(self, s: str) -> str:\n",
+    "     lst1= list(zip(*s)) # first conver the string to list of letters => it gives the nested list \n",
+    "     d = set(lst1[0])  # then fetch the  1st list  and 0th index  and convert it to the set \n",
+    "\n",
+    "       \n",
+    "     return \"\".join(d)  # now join all the elements of the stack"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "194c7f18",
    "metadata": {},
    "source": [
