--- a/operationonLL.ipynb
+++ b/operationonLL.ipynb
@@ -685,6 +685,48 @@
   },
   {
    "cell_type": "markdown",
+   "id": "abf36a9c",
+   "metadata": {},
+   "source": [
+    "# detect cycle in linkedlist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "224730dc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definition for singly-linked list.\n",
+    "# class ListNode:\n",
+    "#     def __init__(self, x):\n",
+    "#         self.val = x\n",
+    "#         self.next = None\n",
+    "\n",
+    "class Solution:\n",
+    "    def hasCycle(self, head: Optional[ListNode]) -> bool:\n",
+    "        # Use two pointers : slow (tortoise 🐢 ) and fast (hare 🐇 ). The slow pointer moves one step at a time, while the fast pointer moves two steps at a time. If there's a cycle, the fast pointer will eventually meet the slow pointer inside the cycle. If there's no cycle, the fast pointer will reach the end of the list.\n",
+    "\n",
+    "        #Approach :\n",
+    "#1 . Start both pointers at the head of the list.\n",
+    "\n",
+    "#2 . Move slow by 1 step and fast by 2 steps.\n",
+    "\n",
+    "#3 . If fast meets slow, a cycle exists.\n",
+    "\n",
+    "#4 . If fast reaches the end (null), no cycle exists.\n",
+    "        slow , fast = head, head\n",
+    "        while fast is not None and fast.next is not None:\n",
+    "            slow = slow.next\n",
+    "            fast = fast.next.next\n",
+    "            if slow == fast:\n",
+    "                return True # cycle detected \n",
+    "        return False  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "f210c9eb",
    "metadata": {},
    "source": []
