--- a/queues.ipynb
+++ b/queues.ipynb
@@ -752,7 +752,7 @@
     "\n",
     "\n",
     "1. void push(int x) Pushes element x to the back of the queue.\n",
-    "2.int pop() Removes the element from the front of the queue and returns it.\n",
+    "2. int pop() Removes the element from the front of the queue and returns it.\n",
     "3. int peek() Returns the element at the front of the queue.\n",
     "4. boolean empty() Returns true if the queue is empty, false otherwise.\n",
     "\n",
@@ -761,10 +761,15 @@
     "The implemented queue should support all the functions of a normal queue (push, peek, pop, and empty).\n",
     "\n",
     "Implement the MyQueue class:\n",
+    "\n",
     "Queues operation => stack operation\n",
+    "\n",
     "push(int x)   => we use appen method of stack\n",
+    "\n",
     "pop() => first we peek the stack it gives us the first element  and then we pop out the element from the 2nd stack\n",
+    "\n",
     " peek()=> check 2nd stack is empty or not and then pop from the 1st stack and append it to the 2nd stack  and then return the last elelment of the 2nd stack \n",
+    "\n",
     " empty() => check both stack is empty or not \n",
     "'''"
    ]
@@ -829,10 +834,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "class Stack:\n",
     "\n",
     "    def __init__(self):\n",
-    "        self._queue = collections.deque()\n",
+    "        self._queue = deque()\n",
     "\n",
     "    def push(self, x):\n",
     "        q = self._queue\n",
