binary tree revised

--- a/trees/dict&bstree.ipynb
+++ b/trees/dict&bstree.ipynb
@@ -314,7 +314,7 @@
    "id": "08912b3b",
    "metadata": {},
    "source": [
-    "1. left node has smaaler value that right node\n",
+    "1. left node has smaller value than right node\n",
     "2. always we have two child node or one "
    ]
   },
@@ -338,9 +338,9 @@
     "    def __init__(self, data):\n",
     "        self.data = data \n",
     "        self.left = None\n",
-    "        self.rigt = None\n",
+    "        self.right = None\n",
     "    def add_child(self, data):\n",
-    "        if data == self.data:\n",
+    "        if data == self.data:s\n",
     "            return \n",
     "        if data<self.data:\n",
     "            # add data in left subtree\n",
