revision ended and now practice started

--- a/queues.ipynb
+++ b/queues.ipynb
@@ -1141,12 +1141,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a7f70e06",
+   "metadata": {},
+   "source": [
+    "# circular Queue\n",
+    "- A circular queue is the extended version of a regular queue where the last element is connected to the first element. Thus forming a circle-like structure.\n",
+    "#### How Circular Queue Works\n",
+    "- Circular Queue works by the process of circular increment i.e. when we try to increment the pointer and we reach the end of the queue, we start from the beginning of the queue.\n",
+    "1. two pointers FRONT and REAR\n",
+    "2. FRONT track the first element of the queue\n",
+    "3. REAR track the last elements of the queue\n",
+    "4. initially, set value of FRONT and REAR to -1\n",
+    "\n",
+    "## Operations\n",
+    "\n",
+    "1. Enqueue : check if the que is full\n",
+    "- for th first element set the value of the front to 0\n",
+    "- circularly increase the rear index by 1 := when rear reach to the end it would automatically at the start of the queue\n",
+    "- add the new elemnt in the positions pointed to by the rear \n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "89ce603b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "initial queue: \n",
+      "12345\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyCircularQueue():\n",
+    "    def __init__ (self, k):\n",
+    "        self.k = k \n",
+    "        self.queue = [None]*k\n",
+    "        self.head = self.tail = -1\n",
+    "\n",
+    "        ## for inserting the element in the circular queue\n",
+    "    def enqueue(self,data):  #i.e., the rear end is in just before the front end in a circular manner].\n",
+    "        if ((self.tail+1)% self.k ==self.head):\n",
+    "            print(\"the circular queue is full\")\n",
+    "        elif (self.head ==-1):\n",
+    "            self.head = 0\n",
+    "            self.tail = 0\n",
+    "            self.queue[self.tail] = data \n",
+    "        else:\n",
+    "            self.tail = (self.tail +1 )%self.k\n",
+    "            self.queue[self.tail] =data\n",
+    "    def printCqueue   (self):\n",
+    "        if (self.head ==-1):\n",
+    "            print(\"No elemenets remaining \")\n",
+    "        elif (self.tail)>= self.head:\n",
+    "            for i in range(self.head, self.tail+1):\n",
+    "                print(self.queue[i], end= '')\n",
+    "            print()\n",
+    "\n",
+    "        else: \n",
+    "            for i in range(self.head , self.k):\n",
+    "                print(self.queue[i], end= \"\")\n",
+    "            for i in range(0, self.tail +1):\n",
+    "                print(self.queue[i], end= \"\")\n",
+    "            print()\n",
+    "\n",
+    "obj = MyCircularQueue(5)\n",
+    "obj.enqueue(1)\n",
+    "obj.enqueue(2)\n",
+    "obj.enqueue(3)\n",
+    "obj.enqueue(4)\n",
+    "obj.enqueue(5)\n",
+    "print(\"initial queue: \")\n",
+    "obj.printCqueue()\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6581cc40",
+   "metadata": {},
+   "source": [
+    "### 2. deQueue operation \n",
+    "- This function is used to delete an element from the circular queue. In a circular queue, the element is always deleted from the front position. \n",
+    "- Check whether the queue is Empty.\n",
+    "- If it is empty then display Queue is empty.\n",
+    "- If the queue is not empty, then get the last element and remove it from the queue.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "fc9dae3b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initial queue\n",
+      "1 2 3 4 5 \n",
+      "After removing an element from the queue\n",
+      "2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Circular Queue implementation in Python\n",
+    "\n",
+    "\n",
+    "class MyCircularQueue():\n",
+    "\n",
+    "    def __init__(self, k):\n",
+    "        self.k = k\n",
+    "        self.queue = [None] * k\n",
+    "        self.head = self.tail = -1\n",
+    "\n",
+    "    # Insert an element into the circular queue\n",
+    "    def enqueue(self, data):\n",
+    "\n",
+    "        if ((self.tail + 1) % self.k == self.head):\n",
+    "            print(\"The circular queue is full\\n\")\n",
+    "\n",
+    "        elif (self.head == -1):\n",
+    "            self.head = 0\n",
+    "            self.tail = 0\n",
+    "            self.queue[self.tail] = data\n",
+    "        else:\n",
+    "            self.tail = (self.tail + 1) % self.k\n",
+    "            self.queue[self.tail] = data\n",
+    "\n",
+    "    # Delete an element from the circular queue\n",
+    "    def dequeue(self):\n",
+    "        if (self.head == -1):\n",
+    "            print(\"The circular queue is empty\\n\")\n",
+    "\n",
+    "        elif (self.head == self.tail):\n",
+    "            temp = self.queue[self.head]\n",
+    "            self.head = -1\n",
+    "            self.tail = -1\n",
+    "            return temp\n",
+    "        else:\n",
+    "            temp = self.queue[self.head]\n",
+    "            self.head = (self.head + 1) % self.k\n",
+    "            return temp\n",
+    "\n",
+    "    def printCQueue(self):\n",
+    "        if(self.head == -1):\n",
+    "            print(\"No element in the circular queue\")\n",
+    "\n",
+    "        elif (self.tail >= self.head):\n",
+    "            for i in range(self.head, self.tail + 1):\n",
+    "                print(self.queue[i], end=\" \")\n",
+    "            print()\n",
+    "        else:\n",
+    "            for i in range(self.head, self.k):\n",
+    "                print(self.queue[i], end=\" \")\n",
+    "            for i in range(0, self.tail + 1):\n",
+    "                print(self.queue[i], end=\" \")\n",
+    "            print()\n",
+    "\n",
+    "\n",
+    "# Your MyCircularQueue object will be instantiated and called as such:\n",
+    "obj = MyCircularQueue(5)\n",
+    "obj.enqueue(1)\n",
+    "obj.enqueue(2)\n",
+    "obj.enqueue(3)\n",
+    "obj.enqueue(4)\n",
+    "obj.enqueue(5)\n",
+    "print(\"Initial queue\")\n",
+    "obj.printCQueue()\n",
+    "\n",
+    "obj.dequeue()\n",
+    "print(\"After removing an element from the queue\")\n",
+    "obj.printCQueue()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9471a7be",
+   "metadata": {},
+   "source": [
+    "# Implementation of Circular Queue in Python\n",
+    "- In a normal queue, we keep on adding the elements at the rear of the array and once we reach the end of the array we will not be able to insert the elements further. To get rid of this problem we can use the spaces available at the front which is created while removing elements from the queue. We will use the following method to implement the circular queue.\n",
+    "\n",
+    "1. When we insert the element in the queue we will increment the index by (index+1)%size instead of just adding one to it.\n",
+    "2. This will ensure that when we reach the end of the array the index will move again to the start of the array.\n",
+    "3.Now check if the space is empty or not. If the space is empty we can insert the elements further in it.\n",
+    "4. In this method we are inserting elements circularly that's why this method is called circular queue."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c6666c73",
+   "metadata": {},
+   "source": [
+    "### Time complexity Circular Queue in Python:\n",
+    "\n",
+    "- Enqueue: O(1)\n",
+    "- Dequque: O(1)\n",
+    "- Peek: O(1)\n",
+    "- isEmpty: O(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a34cabde",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Peek: 1\n",
+      "Dequeue: 1\n",
+      "Peek after dequeue: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "class CircularQueue:\n",
+    "    def __init__(self, size):\n",
+    "        self.maxSize = size\n",
+    "        self.queueArray = [0] * size\n",
+    "        self.front = -1\n",
+    "        self.rear = -1\n",
+    "\n",
+    "    def enqueue(self, item):\n",
+    "        if self.isEmpty():\n",
+    "            self.front = 0\n",
+    "            self.rear = 0\n",
+    "            self.queueArray[self.rear] = item\n",
+    "        else:\n",
+    "            self.rear = (self.rear + 1) % self.maxSize\n",
+    "            if self.rear == self.front:\n",
+    "                print(\"Queue is full. Cannot enqueue.\")\n",
+    "                self.rear = (self.rear - 1 + self.maxSize) % self.maxSize\n",
+    "            else:\n",
+    "                self.queueArray[self.rear] = item\n",
+    "\n",
+    "    def dequeue(self):\n",
+    "        item = -1  # Assuming -1 represents an empty value\n",
+    "\n",
+    "        if not self.isEmpty():\n",
+    "            item = self.queueArray[self.front]\n",
+    "            if self.front == self.rear:\n",
+    "                self.front = -1\n",
+    "                self.rear = -1\n",
+    "            else:\n",
+    "                self.front = (self.front + 1) % self.maxSize\n",
+    "        else:\n",
+    "            print(\"Queue is empty. Cannot dequeue.\")\n",
+    "\n",
+    "        return item\n",
+    "\n",
+    "    def peek(self):\n",
+    "        if not self.isEmpty():\n",
+    "            return self.queueArray[self.front]\n",
+    "        else:\n",
+    "            print(\"Queue is empty. No peek value.\")\n",
+    "            return -1  # Assuming -1 represents an empty value\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.front == -1 and self.rear == -1\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    circularQueue = CircularQueue(5)\n",
+    "\n",
+    "    circularQueue.enqueue(1)\n",
+    "    circularQueue.enqueue(2)\n",
+    "    circularQueue.enqueue(3)\n",
+    "\n",
+    "    # Should print 1\n",
+    "    print(\"Peek:\", circularQueue.peek())\n",
+    "\n",
+    "    # Should print 1\n",
+    "    print(\"Dequeue:\", circularQueue.dequeue())\n",
+    "\n",
+    "    # Should print 2\n",
+    "    print(\"Peek after dequeue:\", circularQueue.peek())"
+   ]
   }
  ],
  "metadata": {
@@ -1165,7 +1446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.10"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
