--- a/split_array_with_=_sum.ipynb
+++ b/split_array_with_=_sum.ipynb
@@ -156,6 +156,63 @@
    "id": "2646d435",
    "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b76faf68",
+   "metadata": {},
+   "source": [
+    "# inside list operation "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "0bd9c740",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "points = [[0,0],[0,1],[1,0],[0,2],[2,0]]\n",
+    "height= [points[i][0] for i in range(len(points)) ]\n",
+    "print(max(height))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "528cd655",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12.00000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# for getting better precesion\n",
+    "a = 12\n",
+    "print(\"{0:.5f}\".format(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "629c19cf",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -174,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
